--- a/submission_notebook.ipynb
+++ b/submission_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from xgboost import XGBClassifier"
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold"
    ]
   },
   {
@@ -2953,12 +2954,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#logistic regression does not provide improvement in results"
+    "logistic regression and random forest both perform in low 80% roc"
    ]
   },
   {
@@ -2984,6 +2983,75 @@
     "y_pred = (y_pred_prob >= .5).astype(int)\n",
     "\n",
     "print(f\"ROC AUC: {roc_auc_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to acheive higher roc we will need to perform some feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC AUC after dropping day and age: 0.9076012574312476\n"
+     ]
+    }
+   ],
+   "source": [
+    "#day and age had low correlation with target variable lets see if dropping can improve performance\n",
+    "x_train2 = x_train.drop(columns=['day','age'],axis=1)\n",
+    "x_test2 = x_test.drop(columns=['day','age'],axis=1)\n",
+    "\n",
+    "model = XGBClassifier(scale_pos_weight=8, max_depth=6, n_estimators=150, random_state=42)\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "y_pred_prob = model.predict_proba(x_test)[:,1]\n",
+    "\n",
+    "y_pred = (y_pred_prob >= .5).astype(int)\n",
+    "\n",
+    "print(f\"ROC AUC after dropping day and age: {roc_auc_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC AUC with scale_pos_weight=7.0: 0.9067358712736837\n",
+      "ROC AUC with scale_pos_weight=7.2: 0.9071031232624781\n",
+      "ROC AUC with scale_pos_weight=7.4: 0.9071824478208802\n",
+      "ROC AUC with scale_pos_weight=7.6000000000000005: 0.9073584053291134\n",
+      "ROC AUC with scale_pos_weight=7.800000000000001: 0.907000542641461\n",
+      "ROC AUC with scale_pos_weight=8.0: 0.9076012574312476\n",
+      "ROC AUC with scale_pos_weight=8.200000000000001: 0.9079041876951371\n",
+      "ROC AUC with scale_pos_weight=8.400000000000002: 0.9069007019588555\n",
+      "ROC AUC with scale_pos_weight=8.600000000000001: 0.9072890381078653\n",
+      "ROC AUC with scale_pos_weight=8.8: 0.9080546504105899\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in np.arange(7, 9, 0.2):\n",
+    "    model = XGBClassifier(scale_pos_weight=i, max_depth=6, n_estimators=150, random_state=42)\n",
+    "    model.fit(x_train, y_train)\n",
+    "\n",
+    "    y_pred_prob = model.predict_proba(x_test)[:,1]\n",
+    "\n",
+    "    y_pred = (y_pred_prob >= .5).astype(int)\n",
+    "\n",
+    "    print(f\"ROC AUC with scale_pos_weight={i}: {roc_auc_score(y_test, y_pred)}\")"
    ]
   },
   {
