--- a/submission_notebook.ipynb
+++ b/submission_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score, GridSearchCV, RandomizedSearchCV\n",
     "from sklearn.feature_selection import RFE\n",
     "from imblearn.over_sampling import ADASYN, SMOTE\n",
     "from imblearn.pipeline import Pipeline as ImbPipeline\n",
@@ -1307,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1319,7 @@
    ],
    "source": [
     "#use smote dataset to see if perfomrnace improves\n",
-    "rf_smote = RandomForestClassifier(class_weight='balanced',n_estimators=100, random_state=42)\n",
+    "rf_smote = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
     "rf_smote.fit(x1_train_smote,y1_train_smote)\n",
     "#predict \n",
@@ -1332,20 +1331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8313633654023478\n"
+      "0.8247055052988326\n"
      ]
     }
    ],
    "source": [
     "#use adasyn dataset to see if perfomrnace improves\n",
-    "rf_adasyn = RandomForestClassifier(class_weight='balanced',n_estimators=100, random_state=42)\n",
+    "rf_adasyn = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
     "rf_adasyn.fit(x1_train_adasyn,y1_train_adasyn)\n",
     "#predict \n",
@@ -1357,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1369,7 @@
    ],
    "source": [
     "#logistic regression smote\n",
-    "lr_model = LogisticRegression(class_weight='balanced', random_state=42)\n",
+    "lr_model = LogisticRegression(random_state=42)\n",
     "\n",
     "lr_model.fit(x1_train_smote,y1_train_smote)\n",
     "y_pred_lr = lr_model.predict(x1_test_processed)\n",
@@ -1383,20 +1382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.877726987282762\n"
+      "0.8781154022930109\n"
      ]
     }
    ],
    "source": [
     "#logistic regression adasyn\n",
-    "lr_model = LogisticRegression(class_weight='balanced', random_state=42)\n",
+    "lr_model = LogisticRegression(random_state=42)\n",
     "\n",
     "lr_model.fit(x1_train_adasyn,y1_train_adasyn)\n",
     "y_pred_lr = lr_model.predict(x1_test_processed)\n",
@@ -1408,80 +1407,85 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "logistic regression and random forest both perform in mid 80% roc"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC with scale_pos_weight=7.0: 0.9036193092776322\n",
-      "ROC AUC with scale_pos_weight=7.2: 0.90274946779629\n",
-      "ROC AUC with scale_pos_weight=7.4: 0.902736014029095\n",
-      "ROC AUC with scale_pos_weight=7.6000000000000005: 0.9027756094912369\n",
-      "ROC AUC with scale_pos_weight=7.800000000000001: 0.9026925768662368\n",
-      "ROC AUC with scale_pos_weight=8.0: 0.9026682679761611\n",
-      "ROC AUC with scale_pos_weight=8.200000000000001: 0.9033773363143486\n",
-      "ROC AUC with scale_pos_weight=8.400000000000002: 0.9023695322437109\n",
-      "ROC AUC with scale_pos_weight=8.600000000000001: 0.9021984937261444\n",
-      "ROC AUC with scale_pos_weight=8.8: 0.9019577804905974\n"
+      "ROC AUC: 0.8460248309737647\n"
      ]
     }
    ],
    "source": [
-    "#test for best scale_pos_weight\n",
-    "for i in np.arange(7, 9, 0.2):\n",
-    "    model = XGBClassifier(scale_pos_weight=i, max_depth=6, n_estimators=150, random_state=42)\n",
-    "    model.fit(x_train_res, y_train_res)\n",
+    "#xgboost with smote classifier to improve roc\n",
+    "model = XGBClassifier(max_depth=6, n_estimators=150, random_state=42, device='cuda')\n",
+    "model.fit(x1_train_smote,y1_train_smote)\n",
     "\n",
-    "    y_pred_prob = model.predict_proba(x_test)[:,1]\n",
+    "y_pred_prob = model.predict_proba(x1_test_processed)[:,1]\n",
     "\n",
-    "    y_pred = (y_pred_prob >= .5).astype(int)\n",
-    "\n",
-    "    print(f\"ROC AUC with scale_pos_weight={i}: {roc_auc_score(y_test, y_pred)}\")"
+    "print(f\"ROC AUC: {roc_auc_score(y1_test, y_pred_prob)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC: 0.90274946779629\n"
+      "ROC AUC: 0.8457096512618288\n"
      ]
     }
    ],
    "source": [
-    "#xgboost classifier to improve roc\n",
-    "model = XGBClassifier(scale_pos_weight=7.2, max_depth=6, n_estimators=150, random_state=42)\n",
-    "model.fit(x_train_res, y_train_res)\n",
+    "#xgboost with adasyn classifier to improve roc\n",
+    "model = XGBClassifier(max_depth=6, n_estimators=150, random_state=42, device='cuda')\n",
+    "model.fit(x1_train_adasyn,y1_train_adasyn)\n",
     "\n",
+    "y_pred_prob = model.predict_proba(x1_test_processed)[:,1]\n",
     "\n",
-    "y_pred_prob = model.predict_proba(x_test)[:,1]\n",
-    "\n",
-    "\n",
-    "y_pred = (y_pred_prob >= .5).astype(int)\n",
-    "\n",
-    "\n",
-    "print(f\"ROC AUC: {roc_auc_score(y_test, y_pred)}\")"
+    "print(f\"ROC AUC: {roc_auc_score(y1_test, y_pred_prob)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "xgboost performs better and to acheive higher roc we will need to perform some feature engineering"
+    "Use gridsearch to optimize hyperparameter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_param_grid = {\n",
+    "    'n_estimators': [50,75,100,125,150],\n",
+    "    'max_depth': [6,8,10],\n",
+    "    'max_features': ['sqrt','log2',None,.2,.5],\n",
+    "    'min_samples_split': [2,4,6]\n",
+    "}\n",
+    "\n",
+    "rf_randomsearch = RandomizedSearchCV(\n",
+    "    estimator = RandomForestClassifier(random_state=42),\n",
+    "    param_distributions = rf_param_grid,\n",
+    "    n_iter=10,\n",
+    "    cv=5,\n",
+    "    scoring='roc_auc',\n",
+    "    n_jobs=-1,\n",
+    "    random_state = 42\n",
+    ")\n",
+    "\n",
+    "rf_randomsearch.fit(x1_train_adasyn,y1_train_adasyn)\n",
+    "\n",
+    "print(f\"Best RF Params: {rf_randomsearch.best_params_}\")\n",
+    "print(f\"Best RF AUC: {rf_randomsearch.best_score_:.4f}\")"
    ]
   },
   {
